# game-of-life

./: CMakeLists.txt  README.md
include/: game_of_life.h
src/: CMakeLists.txt  grid.cpp  init.cpp  input.cpp  logic.cpp  main.cpp  patterns.cpp  render.cpp
